Fix module path resolution.